manifests/chaosblade-operator-1.7.0.tgz-manifest.yaml
---
# Source: chaosblade-operator/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chaosblade-webhook-server
  namespace: default
spec:
  ports:
    - port: 443
      targetPort: 9443
  selector:
    name: chaosblade-operator
---
# Source: chaosblade-operator/templates/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: chaosblade-tool
  labels:
    name: chaosblade-tool
    app: chaosblade-tool
spec:
  selector:
    matchLabels:
      name: chaosblade-tool
      app: chaosblade-tool
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: chaosblade-tool
        app: chaosblade-tool
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: type
                    operator: NotIn
                    values:
                      - virtual-kubelet
      containers:
        - name: chaosblade-tool
          image: chaosbladeio/chaosblade-tool:1.7.0
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: /var/run/docker.sock
              name: docker-socket
            - mountPath: /opt/chaosblade/chaosblade.dat
              name: chaosblade-db-volume
            - mountPath: /etc/hosts
              name: hosts
            - mountPath: /var/log/audit
              name: audit
            - mountPath: /var/lib/docker
              name: docker-lib
            - mountPath: /etc/docker
              name: docker-etc
            - mountPath: /run/containerd
              name: containerd
            - mountPath: /var/lib/containerd
              name: containerd-lib
            - mountPath: /etc/containerd
              name: containerd-etc
            - mountPath: /var/run/netns
              name: netns
            - mountPath: /host-sys
              name: sys
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      hostPID: true
      tolerations:
        - effect: NoSchedule
          operator: Exists
      volumes:
        - hostPath:
            path: /var/run/docker.sock
          name: docker-socket
        - hostPath:
            path: /var/run/chaosblade.dat
            type: FileOrCreate
          name: chaosblade-db-volume
        - hostPath:
            path: /etc/hosts
          name: hosts
        - hostPath:
            path: /var/lib/docker
          name: docker-lib
        - hostPath:
            path: /etc/docker
          name: docker-etc
        - hostPath:
            path: /var/log/audit
          name: audit
        - hostPath:
            path: /run/containerd
          name: containerd
        - hostPath:
            path: /var/lib/containerd
          name: containerd-lib
        - hostPath:
            path: /etc/containerd
          name: containerd-etc
        - hostPath:
            path: /var/run/netns
          name: netns
        - hostPath:
            path: /sys
          name: sys
      serviceAccountName: chaosblade
---
# Source: chaosblade-operator/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chaosblade-operator
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      name: chaosblade-operator
  template:
    metadata:
      labels:
        name: chaosblade-operator
        part-of: chaosblade
    spec:
      dnsPolicy: ClusterFirst
      hostNetwork: false
      serviceAccountName: chaosblade
      containers:
        - name: chaosblade-operator
          image: chaosbladeio/chaosblade-operator:1.7.0
          command: ["chaosblade-operator"]
          args:
          - '--chaosblade-image-repository=chaosbladeio/chaosblade-tool'
          - '--chaosblade-version=1.7.0'
          - '--chaosblade-image-pull-policy=IfNotPresent'
          - '--log-level=info'
          - '--webhook-enable'
          - '--daemonset-enable'
          - '--remove-blade-interval=72h'
          - '--chaosblade-namespace=default'
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9443
              protocol: TCP
          volumeMounts:
            - mountPath: /tmp/k8s-webhook-server/serving-certs
              name: cert
              readOnly: true
            - mountPath: /opt
              name: chaosblade
      volumes:
        - name: cert
          secret:
            defaultMode: 420
            secretName: chaosblade-webhook-server-cert
        - name: chaosblade
          emptyDir: {}
---
# Source: chaosblade-operator/templates/secret.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: chaosblade-operator
  namespace: default
  labels:
    app: chaosblade-operator
    chart: "chaosblade-operator-1.7.0"
    release: "my-release"
    heritage: "Helm"
webhooks:
  - clientConfig:
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURPakNDQWlLZ0F3SUJBZ0lSQUtWY0pwQlYwbVBCSzJQM09XblZhY1V3RFFZSktvWklodmNOQVFFTEJRQXcKSnpFbE1DTUdBMVVFQXhNY1kyaGhiM05pYkdGa1pTMTNaV0pvYjI5ckxYTmxjblpsY2kxallUQWVGdzB5TkRBMgpNVFl3TURBeE1qbGFGdzB6TkRBMk1UUXdNREF4TWpsYU1DY3hKVEFqQmdOVkJBTVRIR05vWVc5ellteGhaR1V0CmQyVmlhRzl2YXkxelpYSjJaWEl0WTJFd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUIKQVFDbnRDQlQ4RnVWWEV3Tm1EWFo3cnZiNWVSMGlxSFpjUGJuUmVTNXhhRkNNWkl0ejltSGErRFcvYkpUK0pRWQpud3M3czRSNmF [...]
      service:
        name: chaosblade-webhook-server
        namespace: default
        path: /mutating-pods
    name: "chaosblade-operator.default.svc"
    failurePolicy: Ignore
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - pods
    sideEffects: None
    admissionReviewVersions: ["v1beta1"]
